Academics Data Put krdia hai
Academics Data Put Kr dia hai

--- a/Academics_calander.html
+++ b/Academics_calander.html
@@ -150,29 +150,29 @@
                     <div class="project_more">
                         <div class="project_link" style="margin-top: 0.2rem;">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2022-23 (Sem I and II)</a>
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202022-23%20Sem%20I%20and%20II.pdf" target="_blank">AIT Academic Calendar 2022-23 (Sem I and II)</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2021-22 (Sem I and II)</a>
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202021_%2022%20Sem%20I%20and%20II.pdf" target="_blank">AIT Academic Calendar 2021-22 (Sem I and II)</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2020-21 (Sem I and II)</a>
-                        </div>
-
-                        <div class="project_link">
-                            <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2019-20 (Sem I and II)</a>
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202020-21%20Sem%20I%20and%20II.pdf" target="_blank">AIT Academic Calendar 2020-21 (Sem I and II)</a>
                         </div>
 
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2018-19 (Sem I)</a>
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202019-20%20Sem%20I%20and%20sem%20II.pdf" target="_blank">AIT Academic Calendar 2019-20 (Sem I and II)</a>
+                        </div>
+
+                        <div class="project_link">
+                            <img src="vector 2.png" alt="">
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202018%20-%2019%20Sem%20I.pdf" target="_blank">AIT Academic Calendar 2018-19 (Sem I)</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">AIT Academic Calendar 2018-19 (Sem II)</a>
+                            <a href="https://www.aitpune.com/Documents/AcademicCalendar/Academic%20Calendar%202018%20-%2019%20Sem%20II%20Revised.pdf" target="_blank">AIT Academic Calendar 2018-19 (Sem II)</a>
                         </div>
                     </div>
 
