--- a/Academics_exam.html
+++ b/Academics_exam.html
@@ -154,34 +154,34 @@
                     <div class="project_more">
                         <div class="project_link" style="margin-top: 0.2rem;">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Notice: Theory Examination for Students 2023 - 24</a>
+                            <a href="https://www.aitpune.com/Documents/examschedule/2023-24/Theory%20Examination%20for%20Students%20Time%20Table%20Nov%20Dec%202023%20-%2024.pdf" target="_blank">Notice: Theory Examination for Students 2023 - 24</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Third Year Time Table Nov Dec 2023 - 24</a>
+                            <a href="https://www.aitpune.com/Documents/examschedule/2023-24/TETimeTable_SPPUNovDec23.pdf" target="_blank">Third Year Time Table Nov Dec 2023 - 24</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Final Year Time Table Nov Dec 2023 - 24</a>
+                            <a href="https://www.aitpune.com/Documents/examschedule/2023-24/BETimeTable_SPPUNovDec23.pdf" target="_blank">Final Year Time Table Nov Dec 2023 - 24</a>
                         </div>
                     </div>
 
                     <div class="project_more">
                         <div class="project_link" style="margin-top: 0.2rem;">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">FE_Insem Exam_Sem I_OCT 2023</a>
+                            <a href="https://www.aitpune.com/FE_Insem%20Exam_Sem%20I_%20OCT%202023.pdf" target="_blank">FE_Insem Exam_Sem I_OCT 2023</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">SE Insem_ Sem I_ OCT 2023</a>
+                            <a href="https://www.aitpune.com/SE%20Insem_%20Sem%20I_%20OCT%202023.pdf" target="_blank">SE Insem_ Sem I_ OCT 2023</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Insem Exam (2019 pattern) for BE (Sem-I)</a>
+                            <a href="https://www.aitpune.com/Documents/ExamSchedule/2023-24/BE%20(2019%20Pattern)%20INSEM%20Examination%20Aug-Sep%202023%20-Time%20Table.pdf" target="_blank">Insem Exam (2019 pattern) for BE (Sem-I)</a>
                         </div>
                         <div class="project_link">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Insem Exam (2019 pattern) for TE (Sem-I)</a>
+                            <a href="https://www.aitpune.com/Documents/ExamSchedule/2023-24/TE%20(2019%20Pattern)%20INSEM%20Examination%20Time%20Table%20Aug-Sep%202023.pdf" target="_blank">Insem Exam (2019 pattern) for TE (Sem-I)</a>
                         </div>
                     </div>
 
