--- a/Academics_obe.html
+++ b/Academics_obe.html
@@ -150,7 +150,7 @@
                      <div class="project_more">
                         <div class="project_link" style="margin-top: 0.2rem;">
                             <img src="vector 2.png" alt="">
-                            <a href="" target="_blank">Outcome-Based Education (OBE) Manual</a>
+                            <a href="https://www.aitpune.com/Documents/OBE_Manual_20Mar2022.pdf" target="_blank">Outcome-Based Education (OBE) Manual</a>
                         </div>
                         
                     </div>
