--- a/Academics.html
+++ b/Academics.html
@@ -92,9 +92,9 @@
             <section class="jd_table">
                 <ul>
                     <a href="Academics.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">Principal's Corner</a>
-                    <a href="Academics_exam.html" class="fetchLink" data-elementid="hod_content">Exam Schedule</a>
-                    <a href="Academics_calander.html" class="fetchLink" data-elementid="faculty_asge">Academic Calendar</a>
-                    <a href="Academics_obe.html" class="fetchLink" data-elementid="student_roll">OBE</a>
+                    <a href="./academics/Academics_exam.html" class="fetchLink" data-elementid="hod_content">Exam Schedule</a>
+                    <a href="./academics/Academics_calander.html" class="fetchLink" data-elementid="faculty_asge">Academic Calendar</a>
+                    <a href="./academics/Academics_obe.html" class="fetchLink" data-elementid="student_roll">OBE</a>
                 </ul>
             </section>
             <div id="mainContent">
