--- a/Alumini.html
+++ b/Alumini.html
@@ -92,13 +92,13 @@
         <section class="jd_table">
             <ul>
                 <a href="#" class="fetch-link active" data-url="Alumini.html" id="tabletop" data-target-container="mainContent" style="text-decoration: none;">About Alumni</a>
-                <a href="#" class="fetch-link" data-url="Alumini_memo.html" data-target-container="mainContent" style="text-decoration: none;">Memorandum</a>
-                <a href="#" class="fetch-link" data-url="Alumin_rules.html" data-target-container="mainContent"  style="text-decoration: none;">Rules & Regulations</a>
-                <a href="#" class="fetch-link" data-url="Alumini_meetreport.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Meet Reports</a>
-                <a href="#" class="fetch-link" data-url="Alumini_login.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Login</a>
-                <a href="#" class="fetch-link" data-url="Alumini_enter.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Entrepreneurs</a>
-                <a href="#" class="fetch-link" data-url="Alumini_illustrous.html" data-target-container="mainContent"  style="text-decoration: none;">Illustrious Alumni</a>                
-                <a href="#" class="fetch-link" data-url="Alumini_contact.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Us</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_memo.html" data-target-container="mainContent" style="text-decoration: none;">Memorandum</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumin_rules.html" data-target-container="mainContent"  style="text-decoration: none;">Rules & Regulations</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_meetreport.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Meet Reports</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_login.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Login</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_enter.html" data-target-container="mainContent"  style="text-decoration: none;">Alumni Entrepreneurs</a>
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_illustrous.html" data-target-container="mainContent"  style="text-decoration: none;">Illustrious Alumni</a>                
+                <a href="#" class="fetch-link" data-url="./alumni/Alumini_contact.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Us</a>
                
 
             </ul>
