--- a/PLACEMENT_T&P.html
+++ b/PLACEMENT_T&P.html
@@ -95,13 +95,13 @@
         <section class="jd_table">
             <ul>
                 <a href="#" class="fetch-link active" data-url="PLACEMENT_T&P.html" id="tabletop" data-target-container="mainContent" style="text-decoration: none;">T & P Committee</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_SUMMARY.html" data-target-container="mainContent" style="text-decoration: none;">Placement Summary</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_DOMAIN.html" data-target-container="mainContent"  style="text-decoration: none;">Domains of T & P Cell</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_DETAIL.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Details</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_BROCHURE.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Brochure</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_ACTIVITIES.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Activities</a>
-                <a href="#" class="fetch-link" data-url="PLACEMENT_CONTACT.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Us</a>                
-                <a href="#" class="fetch-link" data-url="PLACEMENT_HIGHLIGHTS.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Highlights</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_SUMMARY.html" data-target-container="mainContent" style="text-decoration: none;">Placement Summary</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_DOMAIN.html" data-target-container="mainContent"  style="text-decoration: none;">Domains of T & P Cell</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_DETAIL.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Details</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_BROCHURE.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Brochure</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_ACTIVITIES.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Activities</a>
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_CONTACT.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Us</a>                
+                <a href="#" class="fetch-link" data-url="./placements/PLACEMENT_HIGHLIGHTS.html" data-target-container="mainContent"  style="text-decoration: none;">Placement Highlights</a>
                
 
             </ul>
