--- a/ADMIN_AIT.html
+++ b/ADMIN_AIT.html
@@ -85,10 +85,10 @@
             <section class="jd_table">
                 <ul>
                     <a href="#" class="fetch-link active" data-url="ADMIN_AIT.html" id="tabletop" data-target-container="mainContent"  style="text-decoration: none;">AIT Administration</a>
-                    <a href="#" class="fetch-link" data-url="ADMIN_JD.html"  data-target-container="mainContent" style="text-decoration: none;">Joint Directors Corner</a>               
-                    <a href="#" class="fetch-link" data-url="ADMIN_Staff.html" data-target-container="mainContent"  style="text-decoration: none;">Admin Staff</a>
-                    <a href="#" class="fetch-link" data-url="ADMIN_Greivance.html" data-target-container="mainContent"  style="text-decoration: none;">Grievance Redressal</a>
-                    <a href="#" class="fetch-link" data-url="ADMIN_Notices.html" data-target-container="mainContent"  style="text-decoration: none;">Admin Notices</a>
+                    <a href="#" class="fetch-link" data-url="./administration/ADMIN_JD.html"  data-target-container="mainContent" style="text-decoration: none;">Joint Directors Corner</a>               
+                    <a href="#" class="fetch-link" data-url="./administration/ADMIN_Staff.html" data-target-container="mainContent"  style="text-decoration: none;">Admin Staff</a>
+                    <a href="#" class="fetch-link" data-url="./administration/ADMIN_Greivance.html" data-target-container="mainContent"  style="text-decoration: none;">Grievance Redressal</a>
+                    <a href="#" class="fetch-link" data-url="./administration/ADMIN_Notices.html" data-target-container="mainContent"  style="text-decoration: none;">Admin Notices</a>
                 </ul>
             </section>
             <div id="mainContent">
