--- a/mandatory/info.html
+++ b/mandatory/info.html
@@ -54,8 +54,8 @@
                             <li><a href="rules/GBM 21 Apr 2018.pdf" target="_blank">21 Apr 2018</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://www.aitpune.com/AICTE-Approved-Reports.aspx" target="_blank"><strong>AICTE Ext of Approval Reports from 1994 to 2023 </strong></a></li>
-                    <li><a href="https://www.aitpune.com/NAACReports.aspx" target="_blank"><strong>AQAR of IQAC - Minutes of IQAC and NAAC Reports</strong> </a></li>
+                    <li><a href="AICTE.html" target="_blank"><strong>AICTE Ext of Approval Reports from 1994 to 2023 </strong></a></li>
+                    <li><a href="NAAC_IQAC.html" target="_blank"><strong>AQAR of IQAC - Minutes of IQAC and NAAC Reports</strong> </a></li>
                     <li><a href="Documents/AIT Growth Plan 2015-20.pdf" target="_blank">AIT Five Year Growth Plan 2015-20</a></li>
                     <li><a href="aitgrowthplan.pdf" target="_blank">AIT Growth Plan 2013-2023 (updated on Aug 2014)</a>	</li>
 
