--- a/NAAC_DVV2.html
+++ b/NAAC_DVV2.html
@@ -106,53 +106,53 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>1.1.3</td>
-                                    <td><a href="">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1_1_3_teachers%20for%20university%20activities.pdf">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td>2</td>
                                     <td>1.2.1</td>
-                                    <td><a href="">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1.2.1_METRIC%20LEVEL_List%20of%20programs%20in%20which%20CBCS.docx">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>3</td>
                                     <td>1.3.2</td>
-                                    <td><a href="">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1.3.2_merged%20syllabus%20showing%20project.pdf">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
                                 </tr>
                                 <tr id="row4">
                                     <td>4</td>
                                     <td>1.3.3</td>
-                                    <td><a href="">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1.3.3_.pdf">"Teachers of the  Institution participated in curriculum  development ,paper setting and paper assessment of the affiliating University SPPU during the last five years"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 1.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria1/1_3_3_internship.pdf">"Supplementary Info 1.3.3"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 1.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria1/1_3_3_project.pdf">"Supplementary Info 1.3.3"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td>5</td>
                                     <td>1.4.1</td>
-                                    <td><a href="">"Institution obtains  feedback on the syllabus and its transaction at the institution from the following  stakeholders"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1_4_1_final.pdf">"Institution obtains  feedback on the syllabus and its transaction at the institution from the following  stakeholders"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 1.4.1"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria1/1_4_1_analysis_without_parents.pdf">"Supplementary Info 1.4.1"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 1.4.1"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria1/1_4_1_feedback.pdf">"Supplementary Info 1.4.1"</a></td>
                                 </tr>
 
                                 <tr id="row10">
                                     <td>6</td>
                                     <td>1.4.2</td>
-                                    <td><a href="">"Feedback process of the Institution "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/1_4_2_feedback%20process.pdf">"Feedback process of the Institution "</a></td>
                                 </tr>
                                
                                 
