--- a/NAAC_DVV2_C2.html
+++ b/NAAC_DVV2_C2.html
@@ -119,53 +119,53 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>2.1.1</td>
-                                    <td><a href="">	"Average Enrollment of students (Average of last five years)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2_1_1_student%20enrollement_pagenumber.pdf">	"Average Enrollment of students (Average of last five years)"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td>2</td>
                                     <td>2.2.2</td>
-                                    <td><a href="">"Student- Full time teacher ratio (Data for the latest completed academic year 2019-20)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2_2_2_students%20teachers%20data%20of%202019-20.pdf">"Student- Full time teacher ratio (Data for the latest completed academic year 2019-20)"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>3</td>
                                     <td>2.3.3</td>
-                                    <td><a href="">"Ratio of students to mentor for academic and other related issues (Data for the latest completed academic  year 2019-20)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2_3_3_mentor%20mentee%20details%20of%202019-20.pdf">"Ratio of students to mentor for academic and other related issues (Data for the latest completed academic  year 2019-20)"</a></td>
                                 </tr>
                                 <tr id="row4">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 2.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria2/2_3_3_listwithproof.pdf">"Supplementary Info 2.3.3"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 2.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData//Criteria2/2_3_3_mentorallotment.pdf">"Supplementary Info 2.3.3"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 2.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria2/2_3_3_mentorlist.pdf">"Supplementary Info 2.3.3"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td>4</td>
                                     <td>2.4.1</td>
-                                    <td><a href="">	"Average percentage of full time teachers against sanctioned posts during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2.4.1_final.pdf">	"Average percentage of full time teachers against sanctioned posts during the last five years"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td>5</td>
                                     <td>2.4.2</td>
-                                    <td><a href="">	"List of Teachers with Ph. D and their degree/proof"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2_4_2_faculty%20phd%20degree.pdf">	"List of Teachers with Ph. D and their degree/proof"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td>6</td>
                                     <td>2.4.3</td>
-                                    <td><a href="">	"Average teaching experience of full time teachers in the same institution (Data for the latest completed academic year in number of years) "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2_4_3_appointment%20orders%20of%20faculty%20of%202019-20.pdf">	"Average teaching experience of full time teachers in the same institution (Data for the latest completed academic year in number of years) "</a></td>
                                 </tr>
 
                                 <tr id="row10">
                                     <td>7</td>
                                     <td>2.6.3</td>
-                                    <td><a href="">"Result sheet published by the affiliating university attested by the Principal of the college"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/2.6.3_result%20analysis%20last%205%20yrs.pdf">"Result sheet published by the affiliating university attested by the Principal of the college"</a></td>
                                 </tr>
                                
                                 
