--- a/NAAC_DVV3_C7.html
+++ b/NAAC_DVV3_C7.html
@@ -120,47 +120,47 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>7.1.2</td>
-                                    <td><a href="">"The Institution has facilities for alternate sources of energy and energy conservation measures  "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7.1.2_METRIC%20LEVEL%20FINAL.pdf">"The Institution has facilities for alternate sources of energy and energy conservation measures  "</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 7.1.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria7/7_1_2.pdf">"Supplementary Info 7.1.2"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>2</td>
                                     <td>7.1.4</td>
-                                    <td><a href="">	Water conservation facilities available in the Institution:"</td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7.1.4.pdf">	Water conservation facilities available in the Institution:"</td>
                                 </tr>
                                 <tr id="row4">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 7.1.4"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria7/7_1_4.pdf">	"Supplementary Info 7.1.4"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td>3</td>
                                     <td>7.1.5</td>
-                                    <td><a href="">	"Green campus initiatives proofs"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7_1_5_METRIC%20LEVEL%20FINAL.pdf">	"Green campus initiatives proofs"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 7.1.5"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria7/7_1_5.pdf">	"Supplementary Info 7.1.5"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td>4</td>
                                     <td>7.1.6</td>
-                                    <td><a href="">	"Proofs of quality audits on environment and energy regularly undertaken by the Institution and any awards received for such green campus initiatives"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7_1_6_METRIC%20LEVEL%20FINAL.pdf">	"Proofs of quality audits on environment and energy regularly undertaken by the Institution and any awards received for such green campus initiatives"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td>5</td>
                                     <td>7.1.7</td>
-                                    <td><a href="">	"Proofs of the Institution has disabled-friendly,  barrier free environment"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7.1.7_METRIC%20LEVEL%20FINAL.pdf">	"Proofs of the Institution has disabled-friendly,  barrier free environment"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td>6</td>
                                     <td>7.1.10</td>
-                                    <td><a href="">	Proofs of the Institution has a prescribed code of conduct for students, teachers, administrators and other staff and conducts periodic programmes in this regard.</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/7_1_10.pdf">	Proofs of the Institution has a prescribed code of conduct for students, teachers, administrators and other staff and conducts periodic programmes in this regard.</a></td>
                                 </tr>
 
                                
