--- a/Academics.html
+++ b/Academics.html
@@ -84,7 +84,7 @@
                 
             </div>
             <div class="about_image">
-                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGp%20photo%202071.jpg?alt=media&token=fb801906-3863-412b-a3af-d467fc0884bb">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2FDJI_0171%20copy.jpg?alt=media&token=497c1d01-8a5c-4120-85ae-733184a571b0">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>       
