--- a/NAAC_DVV2_C3.html
+++ b/NAAC_DVV2_C3.html
@@ -119,71 +119,71 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>3.1.1</td>
-                                    <td><a href="">"Grants received from Government and non-governmental agencies for research projects, endowments, Chairs in the institution during the last five years (INR in Lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3_1_1_research%20grant%205%20yrs.pdf">"Grants received from Government and non-governmental agencies for research projects, endowments, Chairs in the institution during the last five years (INR in Lakhs)"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td>2</td>
                                     <td>3.1.2</td>
-                                    <td><a href="">"E-copies of letters from the University indicating the name of the Guide / co- guide recognized."</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.1.2_PhD%20guide%20proof.pdf">"E-copies of letters from the University indicating the name of the Guide / co- guide recognized."</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>3</td>
                                     <td>3.1.3</td>
-                                    <td><a href="">"List of teachers along with the department affiliation, title of the funded project, the amount and the funding agency during the last five years."</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.1.3_Final_11%20nov.pdf">"List of teachers along with the department affiliation, title of the funded project, the amount and the funding agency during the last five years."</a></td>
                                 </tr>
                                 <tr id="row4">
                                     <td>4</td>
                                     <td>3.2.2</td>
-                                    <td><a href="">"Number of workshops/seminars conducted on Research Methodology, Intellectual Property Rights (IPR) and entrepreneurship during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.2.2.pdf">"Number of workshops/seminars conducted on Research Methodology, Intellectual Property Rights (IPR) and entrepreneurship during the last five years"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td>5</td>
                                     <td>3.3.1</td>
-                                    <td><a href="">"Number of Ph.Ds registered per eligible teacher during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.3.1%20&3.3.1-2%20list%20and%20proof%20_AIT-Nov%208,2021.pdf">"Number of Ph.Ds registered per eligible teacher during the last five years"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td>6</td>
                                     <td>3.3.2</td>
-                                    <td><a href="">	"Number of research papers per teachers in the Journals notified on UGC website during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.3.2%20final_proofs.pdf">	"Number of research papers per teachers in the Journals notified on UGC website during the last five years"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 3.3.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/3_3_2.aspx">"Supplementary Info 3.3.2"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td>7</td>
                                     <td>3.3.3</td>
-                                    <td><a href="">"Number of books and chapters in edited volumes/books published and papers published in national/ international conference proceedings per teacher during last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.3.3%20Final-15%20Nov%2021.pdf">"Number of books and chapters in edited volumes/books published and papers published in national/ international conference proceedings per teacher during last five years"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td>8</td>
                                     <td>3.4.2</td>
-                                    <td><a href="">	"Awards and recognitions received for extension activities from government/ government recognised bodies during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.4.2_final.pdf">	"Awards and recognitions received for extension activities from government/ government recognised bodies during the last five years"</a></td>
                                 </tr>
 
                                 <tr id="row10">
                                     <td>9</td>
                                     <td>3.4.3</td>
-                                    <td><a href="">"Extension and outreach programs conducted by the institution through NSS/NCC/Red cross/YRC etc., during the last five years "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.4.4%20and%203.4.3_metric%20level_NSS.pdf">"Extension and outreach programs conducted by the institution through NSS/NCC/Red cross/YRC etc., during the last five years "</a></td>
                                 </tr>
 
                                 <tr id="row11">
                                     <td>10</td>
                                     <td>3.4.4</td>
-                                    <td><a href="">"Students participating in extension activities at 3.4.3. above during last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.4.4%20and%203.4.3_metric%20level_NSS.pdf">"Students participating in extension activities at 3.4.3. above during last five years"</a></td>
                                 </tr>
 
                                 <tr id="row12">
                                     <td>11</td>
                                     <td>3.5.1</td>
-                                    <td><a href="">	"Collaborative activities for  research, Faculty exchange, Student exchange/ internship per year"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3_5_1_metric_level.pdf">	"Collaborative activities for  research, Faculty exchange, Student exchange/ internship per year"</a></td>
                                 </tr>
 
                                 <tr id="row13">
                                     <td>12</td>
                                     <td>3.5.2</td>
-                                    <td><a href="">"Functional MoUs with institutions, other universities, industries, corporate houses etc. during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/3.5.2%20Final.pdf">"Functional MoUs with institutions, other universities, industries, corporate houses etc. during the last five years"</a></td>
                                 </tr>
                                
                                 
