--- a/NAAC_DVV2_C4.html
+++ b/NAAC_DVV2_C4.html
@@ -119,71 +119,59 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>4.1.3</td>
-                                    <td><a href="">	"Classrooms and seminar halls with ICT- enabled facilities such as smart class, LMS, etc. (Data for the latest completed academic year)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4_1_3%20ICT%20enabled%20classes.pdf">	"Classrooms and seminar halls with ICT- enabled facilities such as smart class, LMS, etc. (Data for the latest completed academic year)"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td>2</td>
                                     <td>4.1.4</td>
-                                    <td><a href="">	"Expenditure, excluding salary for infrastructure augmentation during last five years(INR in Lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4.1.4%20INCOME%20EXPDR.pdf">	"Expenditure, excluding salary for infrastructure augmentation during last five years(INR in Lakhs)"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>3</td>
                                     <td>4.2.2</td>
-                                    <td><a href="">"Proofs of the institution has subscription for the following e-resources" </a>1. e-journals 2. e-ShodhSindhu 3. e-books 4. Remote access to e-resources</td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4_2_2_institutional%20e%20resources%20subscription.pdf">"Proofs of the institution has subscription for the following e-resources" </a>1. e-journals 2. e-ShodhSindhu 3. e-books 4. Remote access to e-resources</td>
                                 </tr>
                                 <tr id="row4">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 4.2.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/4_2_2/Criteria%204_2_2.pdf">	"Supplementary Info 4.2.2"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td>4</td>
                                     <td>4.2.3</td>
-                                    <td><a href="">	"Average annual expenditure for purchase of books/e-books and subscription to journals/e- journals during the last five years (INR in Lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4_2_3_library%20expenditure%20proof.pdf">	"Average annual expenditure for purchase of books/e-books and subscription to journals/e- journals during the last five years (INR in Lakhs)"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 4.2.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/4_2_3.aspx">	"Supplementary Info 4.2.3"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td>5</td>
                                     <td>4.2.4</td>
-                                    <td><a href="">	"Per day usage of library by teachers and students ( foot falls and login data for online access) during the last completed academic year"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4_2_4_METRIC%20LEVEL%20FINAL.pdf">	"Per day usage of library by teachers and students ( foot falls and login data for online access) during the last completed academic year"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td>6</td>
                                     <td>4.3.2</td>
-                                    <td><a href="">"Student - Computer ratio (Data for the latest completed academic year) proof"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4.3.2%20computers%20for%20students%20use%20only.pdf">"Student - Computer ratio (Data for the latest completed academic year) proof"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td>7</td>
                                     <td>4.3.3</td>
-                                    <td><a href="">	"Bandwidth of internet connection in the Institution "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4.3.3%20-Final.pdf">	"Bandwidth of internet connection in the Institution "</a></td>
                                 </tr>
 
                                 <tr id="row10">
                                     <td>8</td>
                                     <td>4.4.1</td>
-                                    <td><a href="">	"Average percentage of expenditure incurred on maintenance of infrastructure (physical and academic support facilities) excluding salary component during the last five years(INR in Lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/4.4.1_%20EXPDR.pdf">	"Average percentage of expenditure incurred on maintenance of infrastructure (physical and academic support facilities) excluding salary component during the last five years(INR in Lakhs)"</a></td>
                                 </tr>
 
                                 <tr id="row11">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 4.4.1"</a></td>
-                                </tr>
-
-                                <tr id="row12">
-                                    <td>11</td>
-                                    <td>3.5.1</td>
-                                    <td><a href="">	"Collaborative activities for  research, Faculty exchange, Student exchange/ internship per year"</a></td>
-                                </tr>
-
-                                <tr id="row13">
-                                    <td>12</td>
-                                    <td>3.5.2</td>
-                                    <td><a href="">"Functional MoUs with institutions, other universities, industries, corporate houses etc. during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/4_4_1.aspx">	"Supplementary Info 4.4.1"</a></td>
                                 </tr>
                                
                                 
