--- a/NAAC_DVV2_C5.html
+++ b/NAAC_DVV2_C5.html
@@ -119,95 +119,95 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>5.1.1</td>
-                                    <td><a href="">	"Average percentage of students benefited by scholarships and freeships provided by the Government during last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_1_1_metric%20level_Govt%20scholarship%20list.pdf">	"Average percentage of students benefited by scholarships and freeships provided by the Government during last five years"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 5.1.1"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria5/5_1_1_Proof.pdf">"Supplementary Info 5.1.1"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>2</td>
                                     <td>5.1.2</td>
-                                    <td><a href="">	"Average percentage of students benefitted by scholarships, freeships etc. provided by the institution / non- government agencies during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_1_2_metric%20level%20_scholarships.pdf">	"Average percentage of students benefitted by scholarships, freeships etc. provided by the institution / non- government agencies during the last five years"</a></td>
                                 </tr>
                                 <tr id="row4">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 5.1.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria5/5_1_2_proof.pdf">"Supplementary Info 5.1.2"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td>3</td>
                                     <td>5.1.3</td>
-                                    <td><a href="">	"Proofs of capacity building and skills enhancement initiatives taken by the institution include the following 1. Soft skills 2. Language and communication skills 3. Life skills (Yoga, physical fitness, health and hygiene) 4. ICT/computing skills"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_1_3_metric%20level_final.pdf">	"Proofs of capacity building and skills enhancement initiatives taken by the institution include the following 1. Soft skills 2. Language and communication skills 3. Life skills (Yoga, physical fitness, health and hygiene) 4. ICT/computing skills"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 5.1.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria5/5_1_3.pdf">	"Supplementary Info 5.1.3"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td>4</td>
                                     <td>5.1.4</td>
-                                    <td><a href="">	"Proofs for Average percentage of students benefitted by guidance for competitive examinations and career counselling offered by the Institution during the last five years"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_1_4_METRIC%20LEVEL_Final.pdf">	"Proofs for Average percentage of students benefitted by guidance for competitive examinations and career counselling offered by the Institution during the last five years"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 5.1.4"</a></td>
+                                    <td><a href="https://www.aitpune.com/5_1_4.aspx">	"Supplementary Info 5.1.4"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td>5</td>
                                     <td>5.1.5</td>
-                                    <td><a href="">	The Institution has a transparent mechanism for timely redressal of student grievances including sexual harassment and ragging cases</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5.1.5.pdf">	The Institution has a transparent mechanism for timely redressal of student grievances including sexual harassment and ragging cases</a></td>
                                 </tr>
 
                                 <tr id="row10">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">"Supplementary Info 5.1.5"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Criteria5/5_1_5.pdf">"Supplementary Info 5.1.5"</a></td>
                                 </tr>
 
                                 <tr id="row11">
                                     <td>6</td>
                                     <td>5.2.1</td>
-                                    <td><a href="">	Average percentage of placement of outgoing students during the last five years</a></td>
+                                    <td><a href="https://www.aitpune.com/Appointmentorder.aspx">	Average percentage of placement of outgoing students during the last five years</a></td>
                                 </tr>
 
                                 <tr id="row12">
                                     <td>7</td>
                                     <td>5.2.2</td>
-                                    <td><a href="">	"Average percentage of students progressing to higher education during the last five years "</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_2_2_METRIC%20LEVEL%20FINAL.pdf">	"Average percentage of students progressing to higher education during the last five years "</a></td>
                                 </tr>
 
                                 <tr id="row13">
                                     <td>8</td>
                                     <td>5.2.3</td>
-                                    <td><a href="">	"Average percentage of students qualifying in state/national/ international level examinations during the last five years (eg: IIT-JAM/CLAT/ NET/SLET/GATE/ GMAT/CAT/GRE/ TOEFL/ Civil Services/State government examinations, etc.)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5.2.3_final.pdf">	"Average percentage of students qualifying in state/national/ international level examinations during the last five years (eg: IIT-JAM/CLAT/ NET/SLET/GATE/ GMAT/CAT/GRE/ TOEFL/ Civil Services/State government examinations, etc.)"</a></td>
                                 </tr>
 
                                 <tr id="row14">
                                     <td>9</td>
                                     <td>5.3.1</td>
-                                    <td><a href="">	"Number of awards/medals won by students for outstanding performance in sports/cultural activities at inter-university/state/national / international level (award for a team event should be counted as one) during the last five years."</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_3_1_METRIC%20LEVEL%20FINAL_PROOFS.pdf">	"Number of awards/medals won by students for outstanding performance in sports/cultural activities at inter-university/state/national / international level (award for a team event should be counted as one) during the last five years."</a></td>
                                 </tr>
 
                                 <tr id="row15">
                                     <td>10</td>
                                     <td>5.3.3</td>
-                                    <td><a href="">	"Average number of sports and cultural events/competitions in which students of the Institution participated during last five years (organised by the institution/other institutions)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_3_3_METRIC%20LEVEL%20FINAL_PROOFS.pdf">	"Average number of sports and cultural events/competitions in which students of the Institution participated during last five years (organised by the institution/other institutions)"</a></td>
                                 </tr>
 
                                 <tr id="row16">
                                     <td>11</td>
                                     <td>5.4.2</td>
-                                    <td><a href="">	"Alumni contribution during the last five years (INR in lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/5_4_2_METRIC%20LEVEL_ALUMNI%20FUND.pdf">	"Alumni contribution during the last five years (INR in lakhs)"</a></td>
                                 </tr>
 
                                 <tr id="row17">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 5.4.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/5_4_2.aspx">	"Supplementary Info 5.4.2"</a></td>
                                 </tr>
                                
                                 
