--- a/NAAC_DVV2_C6.html
+++ b/NAAC_DVV2_C6.html
@@ -119,47 +119,47 @@
                                 <tr id="row1">
                                     <td>1</td>
                                     <td>6.2.3</td>
-                                    <td><a href="">	"Proofs of Implementation of e-governance in areas of operation 1. Administration 2. Finance and Accounts 3. Student Admission and Support 4. Examination"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/6_2_3.pdf">	"Proofs of Implementation of e-governance in areas of operation 1. Administration 2. Finance and Accounts 3. Student Admission and Support 4. Examination"</a></td>
                                 </tr>
                                 <tr id="row2">
                                     <td>2</td>
                                     <td>6.3.2</td>
-                                    <td><a href="">	"Average percentage of teachers provided with financial support to attend conferences/workshops and towards membership fee of professional bodies during the last five years"</a></td>
+                                    <td><a href=https://www.aitpune.com/NAACData/Metric/6_3_2_METRIC%20LEVE%20FINAL.pdf"">	"Average percentage of teachers provided with financial support to attend conferences/workshops and towards membership fee of professional bodies during the last five years"</a></td>
                                 </tr>
                                 <tr id="row3">
                                     <td>3</td>
                                     <td>6.3.3</td>
-                                    <td><a href="">	"Total number of professional development /administrative training Programmes organized by the institution for teaching and non teaching staff year-wise during the last five yea"</td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/6.3.3%20METRIC%20LEVEL_FINAL.pdf">	"Total number of professional development /administrative training Programmes organized by the institution for teaching and non teaching staff year-wise during the last five yea"</td>
                                 </tr>
                                 <tr id="row4">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 6.3.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/6_3_3.aspx">	"Supplementary Info 6.3.3"</a></td>
                                 </tr>
                                 <tr id="row5">
                                     <td>4</td>
                                     <td>6.3.4</td>
-                                    <td><a href="">	"Total number of teachers attending professional development Programmes viz., Orientation / Induction Programme, Refresher Course, Short Term Course year-wise during the last five year"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/6_3_4_merged_final.pdf">	"Total number of teachers attending professional development Programmes viz., Orientation / Induction Programme, Refresher Course, Short Term Course year-wise during the last five year"</a></td>
                                 </tr>
                                 <tr id="row6">
                                     <td>5</td>
                                     <td>6.4.2</td>
-                                    <td><a href="">"Total Grants received from non-government bodies, individuals, Philanthropers year wise during the last five years (INR in Lakhs)"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/6_4_2.pdf">"Total Grants received from non-government bodies, individuals, Philanthropers year wise during the last five years (INR in Lakhs)"</a></td>
                                 </tr>
                                 <tr id="row7">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 6.4.2"</a></td>
+                                    <td><a href="https://www.aitpune.com/6_4_2.aspx">	"Supplementary Info 6.4.2"</a></td>
                                 </tr>
                                 <tr id="row8">
                                     <td>6</td>
                                     <td>6.5.3</td>
-                                    <td><a href="">	"Quality assurance initiatives of the institution include:"</a></td>
+                                    <td><a href="https://www.aitpune.com/NAACData/Metric/6.5.3.pdf">	"Quality assurance initiatives of the institution include:"</a></td>
                                 </tr>
                                 <tr id="row9">
                                     <td></td>
                                     <td></td>
-                                    <td><a href="">	"Supplementary Info 6.5.3"</a></td>
+                                    <td><a href="https://www.aitpune.com/6_5_3.aspx">	"Supplementary Info 6.5.3"</a></td>
                                 </tr>
 
                                
