--- a/IIC_about.html
+++ b/IIC_about.html
@@ -209,6 +209,7 @@
           <div class="footlist"><a href="https://outlook.office365.com/mail/">E-Mail</a></div>
           <div class="footlist"><a href="undermaintain.html">E-Magazine</a></div>
           <div class="footlist"><a href="LIBRARY_E_LIB.html">E-Library</a></div>
+          <div class="footlist"><a href="IIC_about.html">I.I.C</a></div>
         </div>
       </div>
   
