footer and acad link on header added

--- a/IIC_about.html
+++ b/IIC_about.html
@@ -27,7 +27,7 @@
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="index.html#department_nav" id="highlight_items">Departments</a>
+            <a href="index.html#department_nav">Departments</a>
             </ul>
           </div>
         </div>
