changes in admission done

--- a/Admission1.html
+++ b/Admission1.html
@@ -92,6 +92,7 @@
                 <a href="#" class="fetch-link active" data-url="Admission1.html" id="tabletop" data-target-container="mainContent" style="text-decoration: none;">General Info</a>
                 <a href="#" class="fetch-link" data-url="./admissions/FEE_STRUCTURE.html" data-target-container="mainContent" style="text-decoration: none;">Fees Structure</a>
                 <a href="#" class="fetch-link" data-url="./admissions/entrance.html" data-target-container="mainContent"  style="text-decoration: none;">Entrance Examination</a>
+                <a href="#" class="fetch-link" data-url="./admissions/Admission_prospectus.html" data-target-container="mainContent"  style="text-decoration: none;">Prospectus</a>
                 <a href="#" class="fetch-link" data-url="./admissions/ANNOUNCEMENT.html" data-target-container="mainContent"  style="text-decoration: none;">Announcements</a>
                 <a href="#" class="fetch-link" data-url="./admissions/Migration.html" data-target-container="mainContent"  style="text-decoration: none;">Migration to SE/TE</a>
                 <a href="#" class="fetch-link" data-url="./admissions/ME_admissiom.html" data-target-container="mainContent"  style="text-decoration: none;">Admissions: ME</a>
